# Shallow

./: CMakeLists.txt  Makefile  README.md  cw.h  cw_blas.h  cw_mpi.h  swsolve.cpp  swsolve_blas.cpp
